fix the width and height in css , and add combo box style in dark theme css fixed it in dark theme css as 0.0  border weight in not filled cell and 0.3 in filled cell